fixed alignation bugs in About component

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,13 +1,13 @@
 @import "Variables";
 
 #About {
-  display: none;
   .container {
     width: 100%;
-    height: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(650px, 1fr));
     .title {
+      width: 100%;
+      padding: 20px;
       font-size: 2rem;
       font-weight: 800;
       font-style: italic;
@@ -15,8 +15,10 @@
       text-align: center;
     }
     div {
-      padding: 20px;
+      width: 100%;
       .textContainer {
+        width: 100%;
+        padding: 20px;
         color: $mainTextColor;
         font-size: 1.3rem;
         font-weight: 600;
@@ -28,6 +30,7 @@
         }
       }
       .imgContainer {
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -35,7 +38,6 @@
           width: 300px;
           height: 250px;
           border-radius: 20%;
-          margin-left: 5%;
         }
       }
     }
